# project4

./: README.md  requirements.txt
src/camera_system/: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/camera_system/camera_system/: __init__.py  camera_publisher.py  collapse_detector.py  detection_node.py  overlay_node.py
src/camera_system/launch/: camera_system.launch.py
src/rescue_bot/: package.xml  setup.cfg  setup.py
src/rescue_bot/docs/: robot6_runtime_contract.md
src/rescue_bot/launch/: rescue_real.launch.py  rescue_system.launch.py  rescue_web.launch.py
src/rescue_bot/launch/archive/: srd_system.launch.py
src/rescue_bot/rescue_bot/analyzer/: rescue_control_node.py  rescue_nav_node.py  rescue_stt_node.py  rescue_vision_core.py
src/rescue_bot/rescue_bot/web/: README.md  rescue_ui.py
src/rescue_bot/rescue_bot/web/templates/: login_center_srd.html  welcome_center_srd.html
src/robot5_person_search/: package.xml  setup.cfg  setup.py
src/robot5_person_search/launch/: robot5_person_search.launch.py
src/robot5_person_search/robot5_person_search/: explore_detect_supervisor.py  person_event_detector.py
