<!-- v0.110 -->
<!-- file: package.xml -->
<!-- date: 2026-03-17 -->
<!-- changes:
 - robot6_control_node / nav / stt 실행용 ROS 의존성 추가
 - web 통합 런치용 rosbridge_server, web_video_server 실행 의존성 추가
 - control/nav 런타임 기준 누락 의존성(cv_bridge, turtlebot4_navigation) 보강
-->

<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rescue_bot</name>
  <version>0.0.0</version>
  <description>rescue robot orchestration package</description>
  <maintainer email="ahwkt46@gmail.com">chans</maintainer>
  <license>TODO: License declaration</license>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>irobot_create_msgs</exec_depend>
  <exec_depend>turtlebot4_navigation</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pyaudio</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
